theme/masterden2026/css/style.css
/* ... */
@font-face {
  font-family: "DMsans";
  src: url("fonts/DMSans-BoldItalic.woff2") format("woff2");
  font-weight: bold;
  font-style: italic;
}


/* Font personnelle */

@font-face {
  font-family: "ApfelGrotezk";
  src: url("fonts/ApfelGrotezk-Regular.woff2") format("woff2");
  font-weight: normal;
}

@font-face {
  font-family: "ApfelGrotezk";
  src: url("fonts/ApfelGrotezk-Mittel.woff2") format("woff2");
  font-weight: 500;
  font-style: normal;
}

/* ------------------------------------------------------------------------ Variables */
:root {
  /* typographie */
  --fontfamily: "DMsans", sans-serif;
  --fontTitle: "ApfelGrotezk", sans-serif;
  --bigsize: clamp(2.50rem, calc(1.83rem + 3.33vw), 6.00rem);
  --basesize: 1.25rem;
  --weightTitle : 500;
  /* couleur */
  --primary:  rgb(255, 108, 0);; 
  --secondary: rgb(255, 194, 156);
  --gradient: linear-gradient(90deg,var(--primary) 0%, var(--white) 100%);
  --gradient-bg-btn: linear-gradient(90deg,var(--primary) 0%, var(--white) 28%);
  --white:  rgb(255, 251, 249);
  --black: rgba(34, 18, 12);
  --filter : brightness(0) saturate(100%) invert(6%) sepia(39%) saturate(855%) hue-rotate(331deg) brightness(99%) contrast(96%);
  /* espacements homogènes */
  --spacerXS: 1rem;
  --spacer: 2rem;
  --spacerXL: 8rem;
  /* largeur des notes de côté */
  --sn-width: 15rem;
  /* couleur d’accentuation */
  --accentcolor: black;
  /* largeur max. des textes */
  --maxwidth: 50rem;
  /* image */
  --background-header : url("../assets/icone-memoire.svg");
}

@media (max-width:30rem) {
  :root{
    --spacerXS: 0.5rem;
    --spacer:1rem;
    --spacerXL : 4rem; 
    --basesize:1rem;
    --bigsize: clamp(1.5rem, calc(1.5rem + 3.5vw), 3.00rem);
  }
}

/* ------------------------------------------------------------------------ Common */
/* box model */
*, *::after, *::before { box-sizing: border-box; }
/* smooth scroll */
html { 
  scroll-behavior: smooth;
  /* font-size: 18px; si on voulais que les rem prennent la valeur de la typo*/
}
@media (prefers-reduced-motion: reduce) { html { scroll-behavior: auto; } }
/* page defaults */
body {
  font-family: var(--fontfamily);
  color: var(--black);
  font-size: var(--basesize);
  line-height: 1.45;
  margin: 0;
  overflow-x: hidden;
  height: fit-content;
  background-color: var(--white);
}
p:first-child { margin-top: 0; }
a { color: currentColor; text-decoration: none; }
img { max-width: 100%; height: auto; }
mark { background: var(--secondary); padding: 0 .15em; color: var(--black);}
sub, sup { line-height: 0; }
sup {
  top: 0.1em;
  position: relative;
}
hr{ 
  height: 0;
  border: none;
  background: none;
  border-top: 2px solid #000;
  width: 4em;
}

/* ------------------------------------------------------------------------ Cover */

#header {
  min-height: 100vh;
  padding: var(--spacer);
  background-image: var(--background-header);
  background-size: 35%;
  background-repeat: no-repeat;
  background-position: center;
}

.header-content{
  min-height: 65vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

#header h1 {
  margin-bottom: 1rem;
  line-height: 1.1;
  max-width: calc(var(--bigsize) * 16);
  font-size: calc(var(--bigsize) * 1);
  color: var(--black);
  font-family: var(--fontTitle);
  font-weight: var(--weightTitle);
}
#header h2 {
  margin: 0 0 2rem 0;
  line-height: 1.2;
  max-width: calc(var(--bigsize) * 10);
  font-size: calc(var(--bigsize) * .5);
  color: var(--black);
  font-family: var(--fontTitle);
}

#header h2:empty { display: none;}


.meta {
  display: none;
}

.meta-name{
  font-size: 1.5rem;
}

/* #header nav a {
  display: inline-block;
  margin-right: 1em;
} */

.nav-principale {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  width: 100%;
}

.nav-principale img{
  justify-self: center;
}

.nav-principale div+button {
  justify-self: end;
}

.iconsContainer{
  display: flex;
  gap: .5rem;
  justify-self: center;
}

.iconHead{
  width: 3.25rem;
  height: 3.25rem;
  filter: var(--filter);
}


/* le titre courant n’est affiché qu’en contexte print */
.runningtitle, .runningfolio {
  display: none;
}
.runningtitle + h1,
.runningtitle + h2,
.runningtitle + h3 {
  margin-top: 0;
}
@media screen and (max-width:45rem) {
  /*.meta { display: block;}
  .meta > * { margin-bottom: 1em;}*/
  /* #header nav { display: block; } */
}
/* ------------------------------------------------------------------------ Boutons */
button{
  background: none;
  position: relative;
  border: none;
  text-decoration: underline;
  font-family: var(--fontfamily);
  font-size: var(--basesize);
  cursor: pointer;
}
button::before{
  position: absolute;
  z-index: 2;
  content: '';
  background: var(--secondary) ;
  mix-blend-mode: multiply;
  height: 1.2em;
  left: -1px;
  width: 0;
  transition: all 0.5s;
}
button:after {
  display: none;
}
button:hover{
  text-decoration: none;
}
button:active{
  text-decoration: none;
}

button:hover::before {
  width:100%;
}
button:active::before {
  width:100%;
}

/* Quicklinks v2 */ 
 .quicklinks-button{
  position: relative;
  display: flex;
  justify-content: start;
  align-items: start;
  padding-top: .3rem;
  padding-left: .8rem;
  margin-left: -71.5vw;
  clip-path: polygon(10% 0, 12% 85%, 100% 85%, 100% 100%, 36% 100%, 0 100%, 0 0);  
  width: 80vw;
  height: 3.5rem;
  transition: all ease-in-out .2s;
  background: var(--white);
  border-radius: .3rem;
  transform: translateY(0.38rem);
}

.quicklinks-button::before{
  display: block;
  position: absolute;
  content:'';
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: transparent;
  background-image: url(../assets/bg.png);
  background-size: repeat;
  opacity: 0;
}

.quicklinks_text{
  display: block;
  color: var(--black);
  font-size: .75rem;
  font-family: var(--fontfamily);
  line-height: 1.2;
  width: 9%;
}
/* ... */

